# synthdemo

./: .gitignore  CMakeLists.txt
src/: Audio.hpp  Midi.hpp  Oscillator.hpp  Synth.hpp  main.cpp
